// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <RepoCard
      description="Github Türkiye istatistikleri 2019"
      forks={30}
      githubCreatedAt=""
      language={
        Object {
          "name": "JavaScript",
          "slug": "javascript",
        }
      }
      slug="alpcanaydin/github.ist"
      stars={200}
    >
      <Box
        className=""
      >
        <div
          className=""
        >
          <div>
            <Link
              replace={false}
              to="/repository/alpcanaydin/github.ist"
            >
              <a
                href="/repository/alpcanaydin/github.ist"
                onClick={[Function]}
              >
                alpcanaydin/github.ist
              </a>
            </Link>
            <p>
              Github Türkiye istatistikleri 2019
            </p>
          </div>
          <div>
            <Link
              className=""
              replace={false}
              to="/language/javascript"
            >
              <a
                className=""
                href="/language/javascript"
                onClick={[Function]}
              >
                JavaScript
              </a>
            </Link>
            <span>
              200
               Star
            </span>
            <span>
              30
               Fork
            </span>
          </div>
        </div>
      </Box>
    </RepoCard>
  </Router>
</MemoryRouter>
`;

exports[`renders correctly with github creation date 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <RepoCard
      description="Github Türkiye istatistikleri 2019"
      forks={30}
      githubCreatedAt="2014-03-24T13:12:26.000000Z"
      language={
        Object {
          "name": "JavaScript",
          "slug": "javascript",
        }
      }
      slug="alpcanaydin/github.ist"
      stars={200}
    >
      <Box
        className=""
      >
        <div
          className=""
        >
          <div>
            <Link
              replace={false}
              to="/repository/alpcanaydin/github.ist"
            >
              <a
                href="/repository/alpcanaydin/github.ist"
                onClick={[Function]}
              >
                alpcanaydin/github.ist
              </a>
            </Link>
            <p>
              Github Türkiye istatistikleri 2019
            </p>
          </div>
          <div>
            <Link
              className=""
              replace={false}
              to="/language/javascript"
            >
              <a
                className=""
                href="/language/javascript"
                onClick={[Function]}
              >
                JavaScript
              </a>
            </Link>
            <span>
              200
               Star
            </span>
            <span>
              30
               Fork
            </span>
            <span
              className=""
            >
              24 Mart 2014
            </span>
          </div>
        </div>
      </Box>
    </RepoCard>
  </Router>
</MemoryRouter>
`;

exports[`renders correctly with rank 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <RepoCard
      description="Github Türkiye istatistikleri 2019"
      forks={30}
      githubCreatedAt=""
      language={
        Object {
          "name": "JavaScript",
          "slug": "javascript",
        }
      }
      rank={1}
      slug="alpcanaydin/github.ist"
      stars={200}
    >
      <Box
        className=""
      >
        <div
          className=""
        >
          <div>
            <Link
              replace={false}
              to="/repository/alpcanaydin/github.ist"
            >
              <a
                href="/repository/alpcanaydin/github.ist"
                onClick={[Function]}
              >
                #1 alpcanaydin/github.ist
              </a>
            </Link>
            <p>
              Github Türkiye istatistikleri 2019
            </p>
          </div>
          <div>
            <Link
              className=""
              replace={false}
              to="/language/javascript"
            >
              <a
                className=""
                href="/language/javascript"
                onClick={[Function]}
              >
                JavaScript
              </a>
            </Link>
            <span>
              200
               Star
            </span>
            <span>
              30
               Fork
            </span>
          </div>
        </div>
      </Box>
    </RepoCard>
  </Router>
</MemoryRouter>
`;

exports[`renders correctly without description 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <RepoCard
      description=""
      forks={30}
      githubCreatedAt=""
      language={
        Object {
          "name": "JavaScript",
          "slug": "javascript",
        }
      }
      slug="alpcanaydin/github.ist"
      stars={200}
    >
      <Box
        className=""
      >
        <div
          className=""
        >
          <div>
            <Link
              replace={false}
              to="/repository/alpcanaydin/github.ist"
            >
              <a
                href="/repository/alpcanaydin/github.ist"
                onClick={[Function]}
              >
                alpcanaydin/github.ist
              </a>
            </Link>
          </div>
          <div>
            <Link
              className=""
              replace={false}
              to="/language/javascript"
            >
              <a
                className=""
                href="/language/javascript"
                onClick={[Function]}
              >
                JavaScript
              </a>
            </Link>
            <span>
              200
               Star
            </span>
            <span>
              30
               Fork
            </span>
          </div>
        </div>
      </Box>
    </RepoCard>
  </Router>
</MemoryRouter>
`;
